--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.2",
+    "svg-inline-loader": "^0.8.2",
+    "svg-url-loader": "^8.0.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.5.4"
